# skatertron

./: .gitignore  README.md  config.json  controller.py  launch.bat  main.py  model.py  pdf_scraper.py  pyproject.toml  requirements.txt  skatertron_exceptions.py  sqlite_backend.py  tui_view.py  view.py
Skatertron/: __init__.py  alembic.ini  async_database.py  competition_controller.py  config.py  controller.py  database.py  main.py  model_sqlalchemy.py  skatertron_exceptions.py  sqlalchemy_backend.py  sqlite_backend.py  temp_file  test.py  test_controller.py  view.py
Skatertron/alembic/: env.py
Skatertron/enums/: file_status.py  footage_exceptions.py
Skatertron/models/: __init__.py  competition.py  event.py  file.py  skate.py
Skatertron/mq/: mq_send.py  mq_task.py  mq_worker.py
Skatertron/routers/: competition.py  event.py  file.py  messages.py  skate.py
Skatertron/schemas/: competition.py  event.py  file.py  skate.py  update_position_request.py  upload_item.py
Skatertron/static/: file_drag_drop.js  styles.css
Skatertron/templates/: app_frame.html  competition_browser.html  current_order.html  event_browser.html  events_by_competition.html  file.html  file_browser.html  file_browser_context.html  (+16 more)
archive/: app_controller.py  async_database.py  competition_controller.py  postgres_backend.py  sqlalchemy_backend.py  view.py
env-lmp-skatertron/: pyvenv.cfg
tests/: __init__.py  test.py  test_competition.py  test_competition_model.py  test_controller.py  test_event.py  test_event_model.py  test_file.py  test_file_model.py  test_skate.py  test_skate_model.py
(+32 files in other folders)
